Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11195

NUMA does not get enabled even when checks are passed

    XMLWordPrintable

Details

    Description

      MDEV-10829 introduced a cmake check for NUMA libraries, which is presumably supposed to enable the logic if the checks pass. It does not seem to happen.

      -- Looking for include file numa.h
      -- Looking for include file numa.h - found
      -- Looking for include file numaif.h
      -- Looking for include file numaif.h - found
      -- Performing Test HAVE_LIBNUMA
      -- Performing Test HAVE_LIBNUMA - Success
      

      $ cmake . -LAH | grep -i numa
      // Explicitly set NUMA memory allocation policy
      WITH_NUMA:BOOL=ON
      

      $ grep NUMA include/my_config.h 
      #define HAVE_LIBNUMA 1
      

      But I still don't get innodb_numa_interleave variable, apparently because WITH_NUMA which is checked by ha_innodb.cc is not passed through any defines.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.